2014-06-13  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* tests/scaffold.c (buf): Increase size to 1024 to avoid potentially
	buffer overflows in tests.

	* sysdeps/bid/symbol-hacks.h: Add __bid_ne[d|s|t]d2 symbols alias.

2014-06-13  Raphael Moreira Zinsly  <rzinsly@linux.vnet.ibm.com>

	* sysdeps/bid/bid-private.c (__get_digits_d32): Fix to handle NaN.
	(__get_digits_d64): Likewise.
	(__get_digits_d128): Likewise.
	* sysdeps/soft-dfp/bid/numdigits.h (left_justifyd32): Likewise.
	(left_justifyd64): Likewise.
	(left_justifyd128): Likewise.

2014-06-13  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* libdecnumber/decNumber.c (decGetInt): Fix compiler warning where an
	array is potentially accessed out of the bounds.

2014-06-13  Raphael Moreira Zinsly  <rzinsly@linux.vnet.ibm.com>

	* sysdeps/soft-dfp/dpd/numdigits.h (left_justifyd32): Fix to handle
	NaN.
	(left_justifyd64): Likewise.
	(left_justifyd128): Likewise.
	* tests/test-left_justify.c: Add tests to verify bit limits.

2014-06-05  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* Makefile.in [libdfp_c_tests]: Add -Wl,--no-as-needed to avoid tests
	not linking against libdfp.
	[libdfp_cxx_tests]: Likewise.

2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* NEWS: Update with version 1.0.10
	* README.developer: Add more documentation and update BID information.
	* README.maintainer: Likewise.
	* README.user: Likewise.
	* CONTRIBUTORS: Update.

	* include/libdfp-symbols.h: Add weak_alias for assembler code.

	* Makefile.in [C_DEFINES]: Remove -D_POSIX_C_SOURCE=200809L and
	-D_SVID_SOURCE and add -D_ISOC99_SOURCE.
	[CXX_DEFINES]: Remove -D_POSIX_C_SOURCE=200809L and add
	-D_ISOC99_SOURCE.
	* sysdeps/bid/symbol-hacks.h: BID symbol hacks to avoid internal PLT
	calls.
	* sysdeps/dpd/symbol-hacks.h: Fix symbol definitions.
	* sysdeps/soft-dfp/bid/numdigits.h (left_justifyd32): Fix to handle
	NaN.
	(left_justifyd64): Likewise.
	(left_justifyd128): Likewise.
